--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,18 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
+List of things to include in README from R Packages book, for our reference:
+
+1. A paragraph that describes the high-level purpose of the package.
+
+2. An example that shows how to use the package to solve a simple problem.
+
+3. Installation instructions, giving code that can be copied and pasted into R.
+
+4. An overview that describes the main components of the package. For more complex packages, this will point to vignettes for more details.
+
+
+
 The goal of SDS270_Div2 is to create a minimally viable R package.
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
