--- a/README.Rmd
+++ b/README.Rmd
@@ -16,12 +16,6 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-### List of things to include in README from R Packages book, for our reference:
-
-2. An example that shows how to use the package to solve a simple problem.
-
-3. Installation instructions, giving code that can be copied and pasted into R.
-
 ### Overview
 
 At this point in its development, the ggArtsyR package works with `ggplot2()` to add an additional color palette to the user’s repertoire. This is the goghColors dataset, which contains the RGB codes of colors picked from Van Gogh paintings. It also has a function that work alongside `ggplot2()` to create more interesting data visualizations and add contextual information to the user’s plots. This main function is `RectangleFiller()`, which divides data visualizations into colored quadrants, improving the readability of graphs. 
@@ -29,7 +23,18 @@ At this point in its development, the ggArtsyR package works with `ggplot2()` to
 ### Usage example
 
 ```{r}
-# someone write code here if we can figure out how to do rectanglefiller with goghColors thatd be cool
+
+#is there a way to make it so that this part of the code is not visible in the final visible readme? 
+# I think we only want to show usage of the function/dataset if possible
+library(dplyr)
+library(ggplot2)
+plotOne <- ggplot(starwars, aes(x = mass, y = height)) +
+  geom_point() +
+  scale_x_continuous()
+
+# Commented out because of error halting knit
+# RectangleFiller(plotOne,)
+
 ```
 
 ### Installation instructions
@@ -39,17 +44,10 @@ Get the development version from GitHub:
 ```{r}
 # Install remotes if needed:
 # install.packages("remotes")
+# next line commented out because it does not work and halts knitting
 # remotes::install_github("katelyndiaz/SDS270_Div2")
 ```
 
 
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub.
