--- a/README.Rmd
+++ b/README.Rmd
@@ -22,19 +22,20 @@ At this point in its development, the ggArtsyR package works with `ggplot2()` to
 
 ### Usage example
 
-```{r}
-
-#is there a way to make it so that this part of the code is not visible in the final visible readme? 
-# I think we only want to show usage of the function/dataset if possible
+```{r, include=FALSE}
+# Hidden chunk because it is setup for example
 library(dplyr)
 library(ggplot2)
-plotOne <- ggplot(starwars, aes(x = mass, y = height)) +
+plotExample <- ggplot(starwars, aes(x = height, y = mass)) +
   geom_point() +
   scale_x_continuous()
+```
 
+! Write description of example here
+
+```{r}
 # Commented out because of error halting knit
-# RectangleFiller(plotOne,)
-
+# RectangleFiller(plotExample,)
 ```
 
 ### Installation instructions
@@ -47,7 +48,3 @@ Get the development version from GitHub:
 # next line commented out because it does not work and halts knitting
 # remotes::install_github("katelyndiaz/SDS270_Div2")
 ```
-
-
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
