--- a/README.Rmd
+++ b/README.Rmd
@@ -44,8 +44,7 @@ RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 Get the development version from GitHub:
 
 ```{r}
-# Install remotes if needed:
-# install.packages("remotes")
-# next line commented out because it does not work and halts knitting
-# remotes::install_github("katelyndiaz/SDS270_Div2")
+#Install remotes if needed:
+#install.packages("remotes")
+remotes::install_github("katelyndiaz/SDS270_Div2")
 ```
