so many messages for how to install in the `README`...

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 
 Get the development version from GitHub:
 
-```{r}
+```{r, message=FALSE}
 #Install remotes if needed:
 #install.packages("remotes")
 remotes::install_github("katelyndiaz/SDS270_Div2")
