--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# ggArtsyR
+# ggRtsy
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -26,7 +26,7 @@ At this point in its development, the `ggArtsyR()` package works with `ggplot2()
 # Hidden chunk because it is setup for example
 library(dplyr)
 library(ggplot2)
-library(ggArtsyR)
+library(ggRtsy)
 library(purrr)
 plotExample <- ggplot(starwars, aes(x = height, y = mass)) +
   geom_point() +
