--- a/README.Rmd
+++ b/README.Rmd
@@ -54,6 +54,12 @@ Get the development version from GitHub:
 ```{r, message=FALSE, eval=FALSE}
 #Install remotes if needed:
 #install.packages("remotes")
-remotes::install_github("katelyndiaz/SDS270_Div2")
+remotes::install_github("katelyndiaz/ggRtsy")
+```
+
+And load it with
+
+```{r}
+library(ggRtsy)
 ```
 
