--- a/README.Rmd
+++ b/README.Rmd
@@ -40,9 +40,9 @@ Using Hex Codes from the dataset `goghColors`, three colors were added on top of
 RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```
 
-```{r, eval=FALSE}
+```{r, eval=FALSE, include=FALSE}
 #library(tayloRswift)
-plotExample <- ggplot(starwars, aes(x = height, y = mass)) +
+plotExample2 <- ggplot(starwars, aes(x = height, y = mass)) +
   geom_point(size = 4) +
   #scale_color_taylor(palette = "starryNight")+
   theme_minimal()
