--- a/README.Rmd
+++ b/README.Rmd
@@ -71,13 +71,19 @@ library(ggRtsy)
 
 `starryNight` = '#23338C', '#30478C', '#5377A6', '#BDBF7E', '#BFA72C'
 
+
+
 ![`sunflowers`](https://uploads7.wikiart.org/images/vincent-van-gogh/still-life-vase-with-fifteen-sunflowers-1888-1.jpg!Large.jpg)
 
 `sunflowers` = '#74A629', '#F2EB80', '#F2E085', '#BF9821', '#A6681C'
 
+
+
 ![`selfPortrait`](https://uploads8.wikiart.org/images/vincent-van-gogh/self-portrait-1889-1.jpg!Large.jpg)
 
 `selfPortrait` = '#021F59', '#63A5BF', '#8C701C', '#BF9B6F', '#730202' 
+
+
 
 ![`wheatField`](https://uploads4.wikiart.org/images/vincent-van-gogh/wheat-field-with-cypresses-at-the-haude-galline-near-eygalieres-1889-2.jpg!Large.jpg)
 
@@ -89,6 +95,26 @@ library(ggRtsy)
 
 `cafeTerrace` = '#2A6BBF', '#3F6CA6', '#F2C84B', '#D99036', '#BF6734'
 
+
+
+![`rhoneStarry`](https://uploads0.wikiart.org/00175/images/vincent-van-gogh/starry-night-over-the-rhone.jpg!Large.jpg)
+
+`rhoneStarry` = '#073359', '#27668C', '#5A98BF', '#60734D', '#A3A658'
+
+
+
+![`irises`](https://uploads0.wikiart.org/00213/images/vincent-van-gogh/antique-3840759.jpg!Large.jpg)
+
+`irises` = '#415AA6', '#6382BF', '#65A67C', '#8CA653', '#A66D58' 
+
+
+
+![`almondBlossoms`](https://uploads6.wikiart.org/images/vincent-van-gogh/branches-with-almond-blossom-1890(1).jpg!Large.jpg)
+
+`almondBlossoms` = '#236E8C', '#20788C', '#49B3BF', '#41BFBF', '#BDBF75'
+
+
+
 ### See also
 
-[tayloRswift package](https://github.com/asteves/tayloRswift)
+* [tayloRswift package](https://github.com/asteves/tayloRswift)
