starrynight is supposedly smaller now in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -67,7 +67,7 @@ library(ggRtsy)
 
 ### Palettes
 
-![`starryNight`](https://uploads4.wikiart.org/00142/images/vincent-van-gogh/the-starry-night.jpg!Large.jpg)
+![`starryNight`](https://uploads4.wikiart.org/00142/images/vincent-van-gogh/the-starry-night.jpg!Large.jpg){width=50%}
 
 `starryNight` = '#23338C', '#30478C', '#5377A6', '#BDBF7E', '#BFA72C'
 
