`scale_color_gogh` and documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,10 +42,10 @@ RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```
 
 ```{r, eval=FALSE, include=FALSE}
-#library(tayloRswift)
+
 plotExample2 <- ggplot(starwars, aes(x = height, y = mass)) +
   geom_point(size = 4) +
-  #scale_color_taylor(palette = "starryNight")+
+  scale_color_gogh(palette = "starryNight")+
   theme_minimal()
 ```
 
@@ -54,6 +54,8 @@ This package also comes with rgbToHex, converting rgb colors into hex code color
 ```{r}
 rgbToHex(c("(225, 104, 39)","(60, 90, 202)"))
 ```
+
+
 
 ### Installation instructions
 
