please oh please `scale_color_gogh`

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,8 +42,7 @@ RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```
 
 ```{r, eval=FALSE, include=FALSE}
-
-plotExample2 <- ggplot(starwars, aes(x = height, y = mass)) +
+ggplot(starwars, aes(x = height, y = mass)) +
   geom_point(size = 4) +
   scale_color_gogh(palette = "starryNight")+
   theme_minimal()
