attempting to get `scale_color_gogh` to work

--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```{r, eval=FALSE, include=FALSE}
 ggplot(starwars, aes(x = height, y = mass)) +
   geom_point(size = 4) +
-  scale_color_gogh(palette = "starryNight")+
+  scale_color_gogh(palette = "starryNight", discrete = TRUE, reverse=FALSE)+
   theme_minimal()
 ```
 
