are you kidding? This whole time, I just forgot COLOR?!

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,10 +41,10 @@ Using Hex Codes from the dataset `goghColors`, three colors were added on top of
 RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```
 
-```{r, eval=FALSE, include=FALSE}
-ggplot(starwars, aes(x = height, y = mass)) +
+```{r, warning=FALSE, message=FALSE}
+ggplot(starwars, aes(x = height, y = mass, color = height)) +
   geom_point(size = 4) +
-  scale_color_gogh(palette = "starryNight", discrete = TRUE, reverse=FALSE)+
+  scale_color_gogh(palette = "sunflowers", discrete = FALSE, reverse=FALSE) +
   theme_minimal()
 ```
 
