--- a/README.Rmd
+++ b/README.Rmd
@@ -42,13 +42,23 @@ Using Hex Codes from the dataset `goghColors`, three colors were added on top of
 ```{r, warning=FALSE}
 RectangleFiller(plotExample, c("#e32636", "#9966cc", "#f4c2c2"))
 ```
+Continuous example using the `sunflowers` color palette:
 
 ```{r, warning=FALSE, message=FALSE}
-ggplot(starwars, aes(x = height, y = mass, color = height)) +
+# ggplot(starwars, aes(x = height, y = mass, color = sex)) +
+#   geom_point(size = 4) +
+#   scale_color_gogh(palette = "sunflowers", discrete = FALSE, reverse=FALSE) +
+#   theme_minimal()
+```
+Discrete example using the `almondBlossoms` color palette:
+
+```{r, warning=FALSE, message=FALSE}
+ggplot(storms, aes(x = hour, y = wind, color = status)) +
   geom_point(size = 4) +
-  scale_color_gogh(palette = "sunflowers", discrete = FALSE, reverse=FALSE) +
+  scale_color_gogh(palette = "almondBlossoms", discrete = TRUE, reverse=FALSE) +
   theme_minimal()
 ```
+
 
 This package also comes with rgbToHex, converting rgb colors into hex code colors.
 
