--- a/vignettes/Vignette.Rmd
+++ b/vignettes/Vignette.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   message = FALSE,
-  warning = FALSE
+  warning = FALSE,
+  fig.width=6
 )
 
 library(dplyr)
