reformatted the `readme` functions explanations

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,17 @@ knitr::opts_chunk$set(
 
 ### Overview
 
-The `ggArtsyR()` package works with `ggplot2()` to add an additional color palette to the user’s repertoire. This is the `goghColors` dataset, which contains the RGB and hex codes of colors picked from Van Gogh paintings. It also has a function that work alongside `ggplot2()` to create more interesting data visualizations and add contextual information to the user’s plots. This main function is `RectangleFiller()`, which divides data visualizations into a specified number of colored quadrants based on the number of input colors, improving the readability of graphs. 
+The `ggArtsyR()` package works with `ggplot2()` to add an additional color palette to the user’s repertoire. This is the `goghColors` dataset, which contains the RGB and hex codes of colors picked from Van Gogh paintings. It has been broken down into an easy-to-use color palette based on Van Gogh's most famous paintings, in the `gogh_palettes_pop` list. 
+
+#### Functions within the package:
+
+It also has a function that work alongside `ggplot2()` to create more interesting data visualizations and add contextual information to the user’s plots. 
+
+- `RectangleFiller()` - divides data visualizations into a specified number of colored quadrants based on the number of input colors, improving the readability of graphs. 
+
+- `scale_color_gogh()` - used to color the point/lines of your ggplot
+
+- `scale_fill_gogh()` - used to fill the inner color/bars of your ggplot
 
 ### Usage example
 
@@ -63,7 +73,7 @@ ggplot(storms, aes(x = category, fill = status)) +
 ```
 
 
-This package also comes with rgbToHex, converting rgb colors into hex code colors.
+This package also comes with `rgbToHex`, converting rgb colors into hex code colors.
 
 ```{r}
 rgbToHex(c("(225, 104, 39)","(60, 90, 202)"))
