--- a/vignettes/Vignette.Rmd
+++ b/vignettes/Vignette.Rmd
@@ -72,11 +72,10 @@ For ease of use, gogh_palettes_pop is a list of color palettes from the most wel
 `cafeTerrace` = '#2A6BBF', '#3F6CA6', '#F2C84B', '#D99036', '#BF6734'
 ![](https://uploads2.wikiart.org/images/vincent-van-gogh/cafe-terrace-place-du-forum-arles-1888(1).jpg!Large.jpg){width=200px}
 
-The palettes can be used in graphs as follows:
+### The palettes can be used in graphs as follows:
 
 
-
-scale_color_gogh continuous
+#### `scale_color_gogh` Continuous
 
 ```{r}
 plotExample2 <- ggplot(exampleData, aes(x = height, y = mass, color = birth_year)) +
@@ -86,7 +85,7 @@ plotExample2 <- ggplot(exampleData, aes(x = height, y = mass, color = birth_year
 plotExample2
 ```
 
-scale_color_gogh discrete
+#### `scale_color_gogh` Discrete
 
 ```{r, warning=FALSE, message=FALSE}
 ggplot(storms, aes(x = hour, y = wind, color = status)) +
@@ -95,7 +94,7 @@ ggplot(storms, aes(x = hour, y = wind, color = status)) +
   theme_minimal()
 ```
 
-scale_fill_gogh discrete
+#### `scale_fill_gogh` Discrete
 
 ```{r, warning=FALSE, message=FALSE}
 ggplot(storms, aes(x = category, fill = status)) +
