--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 ### Overview
 
-The `ggArtsyR()` package works with `ggplot2()` to add an additional color palette to the user’s repertoire. This is the `goghColors` dataset, which contains the RGB and hex codes of colors picked from Van Gogh paintings. It has been broken down into an easy-to-use color palette based on Van Gogh's most famous paintings, in the `gogh_palettes_pop` list. 
+The `ggRtsy()` package works with `ggplot2()` to add an additional color palette to the user’s repertoire. This is the `goghColors` dataset, which contains the RGB and hex codes of colors picked from Van Gogh paintings. It has been broken down into an easy-to-use color palette based on Van Gogh's most famous paintings, in the `gogh_palettes_pop` list. 
 
 #### Functions within the package:
 
@@ -34,6 +34,8 @@ It also has a function that work alongside `ggplot2()` to create more interestin
 - `scale_fill_gogh()` - used to fill the inner color/bars of your ggplot
 
 - `rgbToHeX()` - used to convert rgb color codes to hex color codes
+
+- `gogh_interpolate()` - interpolates between the colors in `gogh_palettes_pop`
 
 ### Usage example
 
